Fix ChromeOS build.

BUG=731711

Review-Url: https://codereview.chromium.org/2928423003
Cr-Commit-Position: refs/heads/master@{#478824}

Former-commit-id: 759ec5f572a9f9b9ad8ba2262c9fbefb321df0fd